k8s/bonsai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonsai-ingress
  namespace: bonsai
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bonsai.127.0.0.1.nip.io
    secretName: bonsai-tls-secret
  rules:
  - host: bonsai.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5114
